--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nano-performance",
   "license": "MIT",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "An extremely lightweight node module that measures execution time in nanoseconds",
   "homepage": "https://agilite.io",
   "repository": {
@@ -27,7 +27,8 @@
     "speed",
     "hrtime",
     "milliseconds",
-    "nanoseconds"
+    "nanoseconds",
+    "execution speed"
   ],
   "main": "index.js",
   "scripts": {},
